hphp/hack/test/typecheck/T148488550.php.exp
File "T148488550.php", line 11, characters 9-18:
Invalid argument (Typing[4110])
  File "T148488550.php", line 7, characters 13-15:
  Expected `int`
  File "T148488550.php", line 4, characters 10-13:
  But got `?int`
  File "T148488550.php", line 11, characters 6-19:
  All the local information about `$obj->prop` has been invalidated during this call.
This is a limitation of the type-checker; use a local if that's the problem.
